PDF support, executable jar via shade plugin